# wararchive-website

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.js  container-telegram-tracker.service  container-telegram-tracker.timer  entrypoint.sh  generate_geojson.py  ghcp.py  index.html  main.css  main.py  pyproject.toml  requirements.txt
.github/workflows/: static.yml  update-deepstate-data.yml
css/: main.css
data/: deepstate.geojson  wararchive_ua.geojson
js/: app.js  coordsPopup.js  deepStateLayer.js  geocoder.js  ukraine_borders.js
scripts/: get_deepstate_geojson.sh
utils/: __init__.py
