[project]
name = "telegram-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-louvain>=0.16",
    "requests>=2.32.3",
    "telethon>=1.37.0",
    "tqdm>=4.67.0",
]
